--- a/login.html
+++ b/login.html
@@ -3,9 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>登录注册</title>
+    <!-- 引入 LayUI 的样式 -->
+    <link rel="stylesheet" href="./assets/lib/layui/css/layui.css">
+    <!-- 引入自己的css样式 -->
+    <link rel="stylesheet" href="./assets/css/login.css">
+    <!-- 引入 jquery  -->
+    <script src="./assets/lib/jquery.js"></script>
+    <!-- 引入自己的js -->
+    <script src="/assets/js/login.js"></script>
 </head>
 <body>
-    
+    <!-- 头部 login 区域 -->
+    <div class="layui-main">
+        <img src="./assets/images/logo.png" alt="">
+    </div>
+
+    <!-- 登录注册区域 -->
+    <div class="loginAndRegbox">
+        <!-- 提示文字 -->
+        <div class="title-box"></div>
+
+        <!-- 登录 -->
+        <div class="login-box">
+            <form class="layui-form" action="">
+            <!-- 用户名输入框 -->
+            <div class="layui-form-item">
+                <i class="layui-icon layui-icon-username"></i>
+                <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input" />
+              </div>
+              <!-- 密码 -->
+              <div class="layui-form-item">
+                <i class="layui-icon layui-icon-password"></i>
+                <input type="password" name="password" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input" />
+              </div>
+              <!-- 登录按钮 -->
+              <div class="layui-form-item">
+                <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit>登录</button>
+              </div>
+              <div class="layui-form-item links">
+                <a href="javascript:;" id="link_reg">去注册账号</a>
+              </div>
+            </form>
+        </div>
+        
+        <!-- 注册 -->
+        <div class="reg-box">
+            <form class="layui-form" action="">
+                <!-- 用户名输入框 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-username"></i>
+                    <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input" />
+                  </div>
+                  <!-- 密码 -->
+                  <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="password" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input" />
+                  </div>
+                  <!-- 确认密码 -->
+                  <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="repassword" required lay-verify="required" placeholder="请确认密码" autocomplete="off" class="layui-input" />
+                  </div>
+                  <!-- 登录按钮 -->
+                  <div class="layui-form-item">
+                    <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit>注册</button>
+                  </div>
+                  <div class="layui-form-item links">
+                    <a href="javascript:;" id="link_login">去登录账号</a>
+                  </div>
+                </form>
+        </div>
+    </div>
 </body>
 </html>
