完成了登录功能和首页页面

--- a/login.html
+++ b/login.html
@@ -8,10 +8,6 @@
     <link rel="stylesheet" href="./assets/lib/layui/css/layui.css">
     <!-- 引入自己的css样式 -->
     <link rel="stylesheet" href="./assets/css/login.css">
-    <!-- 引入 jquery  -->
-    <script src="./assets/lib/jquery.js"></script>
-    <!-- 引入自己的js -->
-    <script src="/assets/js/login.js"></script>
 </head>
 <body>
     <!-- 头部 login 区域 -->
@@ -26,16 +22,16 @@
 
         <!-- 登录 -->
         <div class="login-box">
-            <form class="layui-form" action="">
+            <form class="layui-form" id="form-login" action="">
             <!-- 用户名输入框 -->
             <div class="layui-form-item">
                 <i class="layui-icon layui-icon-username"></i>
-                <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input" />
+                <input type="text" name="username" required lay-verify="required" lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input" />
               </div>
               <!-- 密码 -->
               <div class="layui-form-item">
                 <i class="layui-icon layui-icon-password"></i>
-                <input type="password" name="password" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input" />
+                <input type="password" name="password" required lay-verify="required|pwd"  placeholder="请输入密码" autocomplete="off" class="layui-input" />
               </div>
               <!-- 登录按钮 -->
               <div class="layui-form-item">
@@ -49,7 +45,7 @@
         
         <!-- 注册 -->
         <div class="reg-box">
-            <form class="layui-form" action="">
+            <form class="layui-form" id="form-reg" action="">
                 <!-- 用户名输入框 -->
                 <div class="layui-form-item">
                     <i class="layui-icon layui-icon-username"></i>
@@ -58,12 +54,12 @@
                   <!-- 密码 -->
                   <div class="layui-form-item">
                     <i class="layui-icon layui-icon-password"></i>
-                    <input type="password" name="password" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input" />
+                    <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码" autocomplete="off" class="layui-input" />
                   </div>
                   <!-- 确认密码 -->
                   <div class="layui-form-item">
                     <i class="layui-icon layui-icon-password"></i>
-                    <input type="password" name="repassword" required lay-verify="required" placeholder="请确认密码" autocomplete="off" class="layui-input" />
+                    <input type="password" name="repassword" required lay-verify="required|repwd" placeholder="请确认密码" autocomplete="off" class="layui-input" />
                   </div>
                   <!-- 登录按钮 -->
                   <div class="layui-form-item">
@@ -75,5 +71,13 @@
                 </form>
         </div>
     </div>
+
+
+    <!-- 引入 Layui 的JS 文件 -->
+    <script src="/assets/lib/layui/layui.all.js"></script>
+      <!-- 引入 jquery  -->
+      <script src="./assets/lib/jquery.js"></script>
+    <!-- 引入自己的js -->
+    <script src="/assets/js/login.js"></script>
 </body>
 </html>
