密码页面初始化完成

--- a/login.html
+++ b/login.html
@@ -77,6 +77,8 @@
     <script src="/assets/lib/layui/layui.all.js"></script>
       <!-- 引入 jquery  -->
       <script src="./assets/lib/jquery.js"></script>
+      <!-- 引入 webapi 样式 -->
+      <script src="/assets/js/webApi.js"></script>
     <!-- 引入自己的js -->
     <script src="/assets/js/login.js"></script>
 </body>
