--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </dl>
           </li>
           <li class="layui-nav-item">
-            <a href=""><span class="iconfont icon-tuichu"></span>退出</a>
+            <a href="javascript:;" id="tuichu"><span class="iconfont icon-tuichu"></span>退出</a>
           </li>
         </ul>
       </div>
@@ -60,9 +60,9 @@
             <li class="layui-nav-item">
                 <a href="javascript:;"><span class="iconfont icon-home"></span>个人中心</a>
                 <dl class="layui-nav-child">
-                  <dd><a href="javascript:;">基本资料</a></dd>
-                  <dd><a href="javascript:;">更换头像</a></dd>
-                  <dd><a href="javascript:;">重置密码</a></dd>
+                  <dd><a href="/user/user_info.html" target="fm">基本资料</a></dd>
+                  <dd><a href="/user/user_pwd.html" target="">更换头像</a></dd>
+                  <dd><a href="/user/user_pwd.html" target="fm">重置密码</a></dd>
                 </dl>
               </li>
           </ul>
@@ -71,7 +71,7 @@
 
       <div class="layui-body">
         <!-- 内容主体区域 -->
-          <iframe name="fm" src="/home/dashboard.html" frameborder="0"></iframe></div>
+          <iframe name="fm" src="/user/user_pwd.html" frameborder="0"></iframe></div>
       </div>
 
       <div class="layui-footer">
@@ -81,5 +81,11 @@
     </div>
     <!-- 导入 layui 的JS文件 -->
     <script src="/assets/lib/layui/layui.all.js"></script>
+    <!-- 引入 jquery 文件 -->
+    <script src="/assets/lib/jquery.js"></script>
+    <!-- 引入 webapi 文件 -->
+    <script src="/assets/js/webApi.js"></script>
+    <!-- 引入自己的 js -->
+    <script src="/assets/js/index.js"></script>
   </body>
 </html>
