--- a/user/user_pwd.html
+++ b/user/user_pwd.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <!-- 引入 layui 样式 -->
     <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
-    <!-- 引入自己的 js 样式 -->
+    <!-- 引入自己的 css 样式 -->
     <link rel="stylesheet" href="/assets/css/user/user_info.css">
 </head>
 
@@ -22,24 +22,24 @@
     <div class="layui-form-item">
       <label class="layui-form-label">原密码</label>
       <div class="layui-input-block">
-        <input type="text" name="oldpwd" required lay-verify="required|nickname"  placeholder="请输入登录名称" autocomplete="off" class="layui-input" />
+        <input type="password" name="oldPwd" required lay-verify="required|nickname"  placeholder="请输入原密码" autocomplete="off" class="layui-input" />
       </div>
     </div>
     <div class="layui-form-item">
       <label class="layui-form-label">新密码</label>
       <div class="layui-input-block">
-        <input type="text" name="newpwd" required lay-verify="required|nickname" placeholder="请输入用户昵称" autocomplete="off" class="layui-input" />
+        <input type="password" name="newPwd" required lay-verify="required|nickname|oldnewpwd" placeholder="请输入新密码" autocomplete="off" class="layui-input" />
       </div>
     </div>
     <div class="layui-form-item">
-      <label class="layui-form-label">确认密码</label>
+      <label class="layui-form-label">请确认密码</label>
       <div class="layui-input-block">
-        <input type="text" name="repwd" required lay-verify="required|email" placeholder="请输入用户邮箱" autocomplete="off" class="layui-input" />
+        <input type="password" name="rePwd" required lay-verify="required|nickname|newrepwd" placeholder="请输入确认密码" autocomplete="off" class="layui-input" />
       </div>
     </div>
     <div class="layui-form-item">
       <div class="layui-input-block">
-        <button class="layui-btn"  lay-submit>提交修改</button>
+        <button class="layui-btn"  lay-submit>修改密码</button>
         <button type="reset" id="btnReset" class="layui-btn layui-btn-primary">重置</button>
       </div>
     </div>
