用户头像修改页面布局

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <a href="javascript:;"><span class="iconfont icon-home"></span>个人中心</a>
                 <dl class="layui-nav-child">
                   <dd><a href="/user/user_info.html" target="fm">基本资料</a></dd>
-                  <dd><a href="/user/user_pwd.html" target="">更换头像</a></dd>
+                  <dd><a href="/user/user_avatar.html" target="fm">更换头像</a></dd>
                   <dd><a href="/user/user_pwd.html" target="fm">重置密码</a></dd>
                 </dl>
               </li>
@@ -71,7 +71,7 @@
 
       <div class="layui-body">
         <!-- 内容主体区域 -->
-          <iframe name="fm" src="/ceshi/user-info.html" frameborder="0"></iframe></div>
+          <iframe name="fm" src="/user/user_avatar.html" frameborder="0"></iframe></div>
       </div>
 
       <div class="layui-footer">
