--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <li class="layui-nav-item">
               <a href="javascript:;"><span class="iconfont icon-home"></span>文章管理</a>
               <dl class="layui-nav-child">
-                <dd><a href="javascript:;">文章类别</a></dd>
-                <dd><a href="javascript:;">文章列表</a></dd>
+                <dd><a href="/article/art_cate.html" target="fm">文章类别</a></dd>
+                <dd><a href="/article/art_list.html" target="fm">文章列表</a></dd>
                 <dd><a href="javascript:;">发布文章</a></dd>
               </dl>
             </li>
@@ -71,7 +71,7 @@
 
       <div class="layui-body">
         <!-- 内容主体区域 -->
-          <iframe name="fm" src="/user/user_avatar.html" frameborder="0"></iframe></div>
+          <iframe name="fm" src="/article/art_list.html" frameborder="0"></iframe></div>
       </div>
 
       <div class="layui-footer">
