--- a/user/user_avatar.html
+++ b/user/user_avatar.html
@@ -44,7 +44,7 @@
   <div class="row2">
     <input type="file" id="file" accept="image/png,image/jpeg">
     <button type="button" class="layui-btn" id="btnsubmit">上传</button>
-    <button type="button" class="layui-btn layui-btn-danger">确定</button>
+    <button type="button" id="qd" class="layui-btn layui-btn-danger">确定</button>
   </div>
 
 
@@ -52,6 +52,8 @@
         </div>
     </div>
 
-    <script src="/assets/lib/layui/layui.js"></script>
+    <script src="/assets/lib/layui/layui.all.js"></script>
+
+    <script src="/assets/js/webApi.js"></script>
 </body>
 </html>
