--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <dl class="layui-nav-child">
                 <dd><a href="/article/art_cate.html" target="fm">文章类别</a></dd>
                 <dd><a href="/article/art_list.html" target="fm">文章列表</a></dd>
-                <dd><a href="javascript:;">发布文章</a></dd>
+                <dd><a href="/article/art_pub.html" target="fm">发布文章</a></dd>
               </dl>
             </li>
             <li class="layui-nav-item">
@@ -71,7 +71,7 @@
 
       <div class="layui-body">
         <!-- 内容主体区域 -->
-          <iframe name="fm" src="/article/art_list.html" frameborder="0"></iframe></div>
+          <iframe name="fm" src="/article/art_pub.html" frameborder="0"></iframe></div>
       </div>
 
       <div class="layui-footer">
